--- a/src/web/stylesheets/common/sass/importers/_bootstrap.scss
+++ b/src/web/stylesheets/common/sass/importers/_bootstrap.scss
@@ -8,6 +8,8 @@ $theme-colors: (
   "secondary": $secondary-color,
 );
 
+$body-color:black;
+
 // stylelint-disable value-keyword-case
 $font-family-sans-serif: $font-family, $fallback-fonts !default;
 $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
@@ -25,10 +27,14 @@ $headings-font-weight: 700 !default;
 $btn-border-radius: 50px !default;
 
 // inputs
-$input-color: theme-var(text-color-4);
+$input-color: theme-var(text-color-2);
 $input-bg: theme-var(bg-3);
 $input-group-addon-bg: theme-var(bg-3);
-
+$input-padding-y: 0.8rem !default;
+$input-padding-x : 1rem !default;
+$input-border-color: #FF9B03;
+$input-border-width: 1px !default;
+$input-border-radius: 8px !default;
 // carousel
 $carousel-indicator-active-bg: theme-var(text-color-5);
 $carousel-caption-color: theme-var(text-color-4);
