add input border color

--- a/src/web/stylesheets/common/sass/importers/_bootstrap.scss
+++ b/src/web/stylesheets/common/sass/importers/_bootstrap.scss
@@ -15,9 +15,12 @@ $btn-border-radius: 50px !default;
 $input-color: theme-var(text-color-2);
 $input-padding-y: 0.8rem !default;
 $input-padding-x : 1rem !default;
-$input-border-color: #FF9B03;
-$input-border-width: 1px !default;
+$input-border-color: theme-var(input-border-color);
+$input-border-width: 2px !default;
 $input-border-radius: 8px !default;
+$input-focus-border-color: theme-var(input-border-color);
+$input-focus-box-shadow: 0;
+
 
 // patch for bootstrap incompactability for css vars
 
