--- a/src/web/stylesheets/signin/style.scss
+++ b/src/web/stylesheets/signin/style.scss
@@ -2,7 +2,7 @@
 @use '../common/sass/base/_typography.scss';
 @use '../common/sass/importers/_bootstrap.scss';
 
-@import '../christmas/_default.js';
+@import './_signinTheme.js';
 
-// default theme
+// page specific theme
 @include gt.populate-theme($thememaplight, $thememapdark, $cssvars);
