--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -1,4 +1,60 @@
-@import '../../../christmas/_default.js';
+$thememaplight : (
+  'text-color-1': #FFFFFF,
+  'text-color-2': #212527,
+  'text-color-3': #5B5B5B,
+  'text-color-4': #C4C4C4,
+  'text-color-5': #A9ABAC,
+  'text-color-6': #E0E0E0,
+  'nav-bg-blue': #0051FF,
+  'nav-bg-green': #24AA70,
+  'nav-bg-lightBlue': #00BAFF,
+  'nav-bg-red': #FF423D,
+  'nav-bg-yellow': #FFBC04,
+  'body-bg-blue': #E9EBFF,
+  'body-bg-green': #E5F4ED,
+  'body-bg-lightBlue': #DFF8FE,
+  'body-bg-red': #FFECF0,
+  'body-bg-yellow': #FFF7E1,
+);
+// just copied the light theme colors to the dark for now
+  // TODO: make this a real dark theme with appropriate colors
+$thememapdark : (
+  'text-color-1': #FFFFFF,
+  'text-color-2': #212527,
+  'text-color-3': #5B5B5B,
+  'text-color-4': #C4C4C4,
+  'text-color-5': #A9ABAC,
+  'text-color-6': #E0E0E0,
+  'nav-bg-blue': #0051FF,
+  'nav-bg-green': #24AA70,
+  'nav-bg-lightBlue': #00BAFF,
+  'nav-bg-red': #FF423D,
+  'nav-bg-yellow': #FFBC04,
+  'body-bg-blue': #E9EBFF,
+  'body-bg-green': #E5F4ED,
+  'body-bg-lightBlue': #DFF8FE,
+  'body-bg-red': #FFECF0,
+  'body-bg-yellow': #FFF7E1,
+);
+
+$cssvars : (
+  'text-color-1': '--text-color-1',
+  'text-color-2': '--text-color-2',
+  'text-color-3': '--text-color-3',
+  'text-color-4': '--text-color-4',
+  'text-color-5': '--text-color-5',
+  'text-color-6': '--text-color-6',
+  'nav-bg-blue': '--nav-bg-blue',
+  'nav-bg-green': '--nav-bg-green',
+  'nav-bg-lightBlue': '--nav-bg-lightblue',
+  'nav-bg-red': '--nav-bg-red',
+  'nav-bg-yellow': '--nav-bg-yellow',
+  'body-bg-blue': '--body-bg-blue',
+  'body-bg-green': '--body-bg-green',
+  'body-bg-lightBlue': '--body-bg-lightblue',
+  'body-bg-red': '--body-bg-red',
+  'body-bg-yellow': '--body-bg-yellow',
+);
 
 @mixin spread-map($map: (), $cssMap: $cssvars) {
   @each $key,
@@ -50,6 +106,3 @@
     @return var($key);
   }
 }
-
-//body
-$body-color: theme-var(text-color-2);
