--- a/src/web/stylesheets/signin/style.scss
+++ b/src/web/stylesheets/signin/style.scss
@@ -10,6 +10,15 @@
 // page specific theme
 @include gt.populate-theme($thememaplight, $thememapdark, $cssvars);
 
+nav{
+  padding: 24px;
+  margin-bottom: 25px;
+
+  .help{
+    color: gt.theme-var(text-color-2, null, $thememaplight, $cssvars);
+  }
+}
+
 .form-control{
   border: 2px solid gt.theme-var(input-border-color, null, $thememaplight, $cssvars);
   padding: 14px 16px;
@@ -25,7 +34,7 @@
 .signin-form{
   width: 36%;
   min-width: 360px;
-  margin: 0 auto;
+  margin: auto;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
   border-radius: 16px;
 
@@ -35,40 +44,22 @@
   }
   .create-account-btn{
     background-color: gt.theme-var(faded-btn-bg, null, $thememaplight, $cssvars);
-    color: gt.theme-var(faded-btn-text-color, null, $thememaplight, $cssvars);
+    color: gt.theme-var(text-color-2, null, $thememaplight, $cssvars);
     border-radius: 0 0 16px 16px;
     margin-top: 6.25rem;
   }
 
   .sign-in-with-google-btn{
     border-radius: 12px;
-    width: 225px;
     height: 50px;
-    max-width: 225px;
+    margin-bottom: 1rem;
   }
 
   .login-btn{
     border-radius: 12px;
-    width: 100%;
     height: 50px;
-
-    @include gm.media-breakpoint-up(md) {
-      width: 225px;
-    }
 
     background-color: gt.theme-var(btn-bg, null, $thememaplight, $cssvars);
     border-color: gt.theme-var(input-border-color, null, $thememaplight, $cssvars);
-  }
-
-  .login-btn-and-google-btn{
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
-
-    @include gm.media-breakpoint-up(md) {
-      flex-direction: row;
-    }
   }
 }
