--- a/src/web/stylesheets/common/pages/signin/style.scss
+++ b/src/web/stylesheets/common/pages/signin/style.scss
@@ -41,14 +41,12 @@
 
   .sign-in-with-google-btn {
     border-radius: 12px;
-    width: 225px;
     height: 50px;
-    max-width: 225px;
+    margin-bottom: 1rem;
   }
 
   .login-btn {
     border-radius: 12px;
-    width: 100%;
     height: 50px;
 
     @include gm.media-breakpoint-up(md) {
