--- a/src/web/stylesheets/signin/style.scss
+++ b/src/web/stylesheets/signin/style.scss
@@ -24,18 +24,13 @@ html,body,#root{
   z-index: -1;
   width: 100vw;
 }
-// body::before{
-//   content: '';
-//   display: block;
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   bottom: 0;
-//   right: 0;
-//   background: url(../../../images/signin/background-vector.svg);
-//   background-repeat: no-repeat;
-//   z-index: -1;
-// }
+
+body{
+  background: url(../../../images/signin/background-vector.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom;
+}
 
 nav{
   padding: 24px;
@@ -59,12 +54,26 @@ nav{
 }
 
 .signin-form{
-  width: 36%;
-  min-width: 360px;
+  width: 100%;
+  height: calc(100vh - 120px);
   margin: auto;
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
+  box-shadow: none;
   border-radius: 16px;
   background: white;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  @include gm.media-breakpoint-up(sm){
+    width: 50%;
+    height: 640px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
+  }
+
+  @include gm.media-breakpoint-up(lg){
+    width: 36%;
+  }
 
   .signin-form-svg{
     display: block;
@@ -73,11 +82,9 @@ nav{
   .create-account-btn{
     background-color: gt.theme-var(faded-btn-bg, null, $thememaplight, $cssvars);
     color: gt.theme-var(text-color-2, null, $thememaplight, $cssvars);
-    border-radius: 0 0 16px 16px;
-    margin-top: 5rem;
 
     @include gm.media-breakpoint-up(md){
-      margin-top: 6rem;
+      border-radius: 0 0 16px 16px;
     }
   }
 
