--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -1,40 +1,40 @@
 $thememaplight : (
-  'text-color-1': #FFFFFF,
+  'text-color-1': #fff,
   'text-color-2': #212527,
-  'text-color-3': #5B5B5B,
-  'text-color-4': #C4C4C4,
-  'text-color-5': #A9ABAC,
-  'text-color-6': #E0E0E0,
-  'nav-bg-blue': #0051FF,
-  'nav-bg-green': #24AA70,
-  'nav-bg-lightBlue': #00BAFF,
-  'nav-bg-red': #FF423D,
-  'nav-bg-yellow': #FFBC04,
-  'body-bg-blue': #E9EBFF,
-  'body-bg-green': #E5F4ED,
-  'body-bg-lightBlue': #DFF8FE,
-  'body-bg-red': #FFECF0,
-  'body-bg-yellow': #FFF7E1,
+  'text-color-3': #5b5b5b,
+  'text-color-4': #c4c4c4,
+  'text-color-5': #a9abac,
+  'text-color-6': #e0e0e0,
+  'nav-bg-blue': #0051ff,
+  'nav-bg-green': #24aa70,
+  'nav-bg-lightBlue': #00baff,
+  'nav-bg-red': #ff423d,
+  'nav-bg-yellow': #ffbc04,
+  'body-bg-blue': #e9ebff,
+  'body-bg-green': #e5f4ed,
+  'body-bg-lightBlue': #dff8fe,
+  'body-bg-red': #ffecf0,
+  'body-bg-yellow': #fff7e1,
 );
 // just copied the light theme colors to the dark for now
-  // TODO: make this a real dark theme with appropriate colors
+// TODO: make this a real dark theme with appropriate colors
 $thememapdark : (
-  'text-color-1': #FFFFFF,
+  'text-color-1': #fff,
   'text-color-2': #212527,
-  'text-color-3': #5B5B5B,
-  'text-color-4': #C4C4C4,
-  'text-color-5': #A9ABAC,
-  'text-color-6': #E0E0E0,
-  'nav-bg-blue': #0051FF,
-  'nav-bg-green': #24AA70,
-  'nav-bg-lightBlue': #00BAFF,
-  'nav-bg-red': #FF423D,
-  'nav-bg-yellow': #FFBC04,
-  'body-bg-blue': #E9EBFF,
-  'body-bg-green': #E5F4ED,
-  'body-bg-lightBlue': #DFF8FE,
-  'body-bg-red': #FFECF0,
-  'body-bg-yellow': #FFF7E1,
+  'text-color-3': #5b5b5b,
+  'text-color-4': #c4c4c4,
+  'text-color-5': #a9abac,
+  'text-color-6': #e0e0e0,
+  'nav-bg-blue': #0051ff,
+  'nav-bg-green': #24aa70,
+  'nav-bg-lightBlue': #00baff,
+  'nav-bg-red': #ff423d,
+  'nav-bg-yellow': #ffbc04,
+  'body-bg-blue': #e9ebff,
+  'body-bg-green': #e5f4ed,
+  'body-bg-lightBlue': #dff8fe,
+  'body-bg-red': #ffecf0,
+  'body-bg-yellow': #fff7e1,
 );
 
 $cssvars : (
