--- a/src/web/stylesheets/common/pages/signin/style.scss
+++ b/src/web/stylesheets/common/pages/signin/style.scss
@@ -8,44 +8,45 @@
 // page specific theme
 @include gt.populate-theme($thememaplight, $thememapdark, $cssvars);
 
-.form-control{
+.form-control {
   border: 2px solid gt.theme-var(signin-input-border-color, null, $thememaplight, $cssvars);
   padding: 14px 16px;
   height: 48px;
   border-radius: 8px;
 
-  &:focus{
+  &:focus {
     border-color: gt.theme-var(signin-input-border-color, null, $thememaplight, $cssvars);
     box-shadow: 0 0 0 0.2rem rgb(255 155 3/ 25%);
   }
 }
 
-.signin-form{
+.signin-form {
   width: 36%;
   min-width: 360px;
   margin: 0 auto;
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
   border-radius: 16px;
 
-  .signin-form-svg{
+  .signin-form-svg {
     display: block;
     margin: 4rem auto 2rem;
   }
-  .create-account-btn{
+
+  .create-account-btn {
     background-color: gt.theme-var(signin-faded-btn-bg, null, $thememaplight, $cssvars);
     color: gt.theme-var(signin-faded-btn-text-color, null, $thememaplight, $cssvars);
     border-radius: 0 0 16px 16px;
     margin-top: 6.25rem;
   }
 
-  .sign-in-with-google-btn{
+  .sign-in-with-google-btn {
     border-radius: 12px;
     width: 225px;
     height: 50px;
     max-width: 225px;
   }
 
-  .login-btn{
+  .login-btn {
     border-radius: 12px;
     width: 100%;
     height: 50px;
@@ -58,7 +59,7 @@
     border-color: gt.theme-var(signin-input-border-color, null, $thememaplight, $cssvars);
   }
 
-  .login-btn-and-google-btn{
+  .login-btn-and-google-btn {
     display: flex;
     flex-direction: column-reverse;
     justify-content: space-between;
