signin changed according to new structure

--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -15,6 +15,8 @@ $thememaplight : (
   body-bg-lightblue: #dff8fe,
   body-bg-red: #ffecf0,
   body-bg-yellow: #fff7e1,
+  bg-1: #fff,
+  bg-2: #212527,
 );
 // just copied the light theme colors to the dark for now
 // TODO: make this a real dark theme with appropriate colors
@@ -35,6 +37,8 @@ $thememapdark : (
   body-bg-lightblue: #dff8fe,
   body-bg-red: #ffecf0,
   body-bg-yellow: #fff7e1,
+  bg-1: #212527,
+  bg-2: #fff,
 );
 
 $cssvars : (
@@ -54,6 +58,8 @@ $cssvars : (
   body-bg-lightblue: --body-bg-lightblue,
   body-bg-red: --body-bg-red,
   body-bg-yellow: --body-bg-yellow,
+  bg-1: --bg-1,
+  bg-2: --bg-2,
 );
 
 @mixin spread-map($map: (), $cssMap: $cssvars) {
