--- a/src/web/stylesheets/common/pages/signin/style.scss
+++ b/src/web/stylesheets/common/pages/signin/style.scss
@@ -22,7 +22,6 @@
     margin-bottom: 25px;
 
     .help {
-      cursor: pointer;
       color: gt.theme-var(signin-text-color-2, null, $thememaplight, $cssvars);
     }
   }
@@ -41,7 +40,7 @@
 
   .signin-form {
     width: 100%;
-    height: 100%;
+    height: 87%;
     margin: auto;
     box-shadow: none;
     border-radius: 16px;
@@ -61,34 +60,24 @@
       width: 27%;
     }
 
-    @include gm.media-breakpoint-down(sm){
-      display: flex;
-      align-items: center;
-    }
-
     .signin-form-svg {
       display: block;
       margin: 4rem auto 2rem;
     }
 
-    .login-btn{
+    .login-btn, .login-with-otp-btn, .create-new-account-btn{
       border-radius: 12px;
       height: 50px;
-      color: white;
       background-color: gt.theme-var(signin-login-btn-bg, null, $thememaplight, $cssvars);
       border-color: gt.theme-var(signin-border-color, null, $thememaplight, $cssvars);
     }
 
     .login-with-otp-btn{
-      border-radius: 12px;
-      height: 50px;
-      border-color: gt.theme-var(signin-border-color, null, $thememaplight, $cssvars);
+      background-color: unset;
     }
 
     .create-new-account-btn{
-      border-radius: 12px;
-      height: 50px;
-      border-color: gt.theme-var(signin-border-color, null, $thememaplight, $cssvars);
+      background-color: unset;
     }
   }
 
