--- a/src/web/stylesheets/common/sass/importers/_bootstrap.scss
+++ b/src/web/stylesheets/common/sass/importers/_bootstrap.scss
@@ -2,6 +2,10 @@
 @import '../base/_variables.scss';
 @import '../../../../../typography/_typography.js';
 
+$theme-colors: (
+  "primary": $primary-color,
+);
+
 // stylelint-disable value-keyword-case
 $font-family-sans-serif: $font-family, $fallback-fonts !default;
 $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
