--- a/src/web/stylesheets/common/pages/signin/style.scss
+++ b/src/web/stylesheets/common/pages/signin/style.scss
@@ -22,6 +22,7 @@
     margin-bottom: 25px;
 
     .help {
+      cursor: pointer;
       color: gt.theme-var(signin-text-color-2, null, $thememaplight, $cssvars);
     }
   }
@@ -40,7 +41,7 @@
 
   .signin-form {
     width: 100%;
-    height: 87%;
+    height: 100%;
     margin: auto;
     box-shadow: none;
     border-radius: 16px;
@@ -58,6 +59,11 @@
 
     @include gm.media-breakpoint-up(xl) {
       width: 27%;
+    }
+
+    @include gm.media-breakpoint-down(sm){
+      display: flex;
+      align-items: center;
     }
 
     .signin-form-svg {
