--- a/src/web/stylesheets/common/pages/signin/style.scss
+++ b/src/web/stylesheets/common/pages/signin/style.scss
@@ -90,6 +90,10 @@
       height: 50px;
       border-color: gt.theme-var(signin-border-color, null, $thememaplight, $cssvars);
     }
+
+    .form-helper{
+      color: red;
+    }
   }
 
   .forgot-password{
