--- a/src/web/stylesheets/common/pages/signin/style.scss
+++ b/src/web/stylesheets/common/pages/signin/style.scss
@@ -24,6 +24,7 @@
     .help {
       cursor: pointer;
       color: gt.theme-var(signin-text-color-2, null, $thememaplight, $cssvars);
+      text-decoration: none;
     }
   }
 
@@ -97,7 +98,9 @@
   }
 
   .forgot-password{
-    cursor: pointer;
+    display: block;
     color: gt.theme-var(signin-text-color-2, null, $thememaplight, $cssvars);
+    margin-bottom: 1rem;
+    text-decoration: none;
   }
 }
