--- a/src/web/stylesheets/common/pages/register/style.scss
+++ b/src/web/stylesheets/common/pages/register/style.scss
@@ -3,3 +3,6 @@
 @use '../../sass/components/auth-nav';
 
 @import './_registerTheme.js';
+
+@include gt.populate-theme($thememaplight, $thememapdark, $cssvars);
+@include gt.populate-theme(gt.$auth-thememaplight, gt.$auth-thememapdark, gt.$auth-cssvars);
