--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -5,7 +5,7 @@ $thememaplight : (
   text-color-4: #c4c4c4,
   text-color-5: #a9abac,
   text-color-6: #e0e0e0,
-  text-color-7: #4361ee,
+  text-color-7: #FE6A07,
   nav-bg-blue: #0051ff,
   nav-bg-green: #24aa70,
   nav-bg-lightblue: #00baff,
@@ -28,7 +28,7 @@ $thememapdark : (
   text-color-4: #c4c4c4,
   text-color-5: #a9abac,
   text-color-6: #e0e0e0,
-  text-color-7: #4361ee,
+  text-color-7: #FE6A07,
   nav-bg-blue: #0051ff,
   nav-bg-green: #24aa70,
   nav-bg-lightblue: #00baff,
@@ -64,29 +64,6 @@ $cssvars : (
   bg-1: --bg-1,
   bg-2: --bg-2,
 );
-
-// auth theme
-$auth-thememaplight : (
-  auth-text-color-1: #212527,
-  auth-text-color-2: #FE6A07,
-  auth-border-color: #FF9B03,
-  auth-login-btn-bg: #FF9B03,
-);
-
-$auth-thememapdark : (
-  auth-text-color-1: #212527,
-  auth-text-color-2: #FE6A07,
-  auth-border-color: #FF9B03,
-  auth-login-btn-bg: #FF9B03,
-);
-
-$auth-cssvars:(
-  auth-text-color-1: --auth-text-color-1,
-  auth-text-color-2: --auth-text-color-2,
-  auth-border-color: --auth-border-color,
-  auth-login-btn-bg: --auth-login-btn-bg,
-);
-
 
 @mixin spread-map($map: (), $cssMap: $cssvars) {
   @each $key,
