--- a/src/web/stylesheets/common/pages/login/style.scss
+++ b/src/web/stylesheets/common/pages/login/style.scss
@@ -2,7 +2,7 @@
 @use '../../sass/base/_mixins' as gm;
 @use '../../sass/components/auth-nav';
 @use '../../sass/components/auth-input';
-@use '../../sass/components/auth-container';
+@use '../../sass/components/auth-containers';
 
 @import './_loginTheme.js';
 
@@ -14,60 +14,19 @@
   height: 100vh;
 }
 
-.form-container {
-  width: 100%;
-  height: 100%;
-  margin: auto;
-  box-shadow: none;
-  border-radius: 16px;
-  background: gt.theme-var(bg-1);
-
-  @include gm.media-breakpoint-up(sm) {
-    width: 50%;
-    height: auto;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
-  }
-
-  @include gm.media-breakpoint-up(lg) {
-    width: 35%;
-  }
-
-  @include gm.media-breakpoint-up(xl) {
-    width: 27%;
-  }
-
-  @include gm.media-breakpoint-down(sm){
-    display: flex;
-    align-items: center;
-  }
-
-  .signin-form-svg {
-    display: block;
-    margin: 4rem auto 2rem;
-  }
-
-  .btn{
-    height: 48px;
-    border-radius: 12px;
-  }
-
-  .btn-primary{
-    color:gt.theme-var(bg-1);
-  }
-
-  .btn-outline-primary{
-    border-radius: 12px;
-    color: gt.theme-var(text-color-1);
-  }
-
-  .form-helper{
-    color: red;
-  }
+.btn a{
+  color: inherit;
+  text-decoration: none;
 }
 
 .forgot-password{
   display: block;
-  color: gt.theme-var(signin-text-color-2, null, $thememaplight, $cssvars);
+  color: gt.theme-var(text-color-7);
   margin-bottom: 1rem;
   text-decoration: none;
+
+  &:hover{
+    text-decoration: none;
+  }
 }
+
