--- a/src/web/stylesheets/common/pages/register/style.scss
+++ b/src/web/stylesheets/common/pages/register/style.scss
@@ -2,59 +2,20 @@
 @use '../../sass/base/_mixins' as gm;
 @use '../../sass/components/auth-nav';
 @use '../../sass/components/auth-input';
-@use '../../sass/components/auth-container';
+@use '../../sass/components/auth-containers';
 
 @import './_registerTheme.js';
 
 @include gt.populate-theme($thememaplight, $thememapdark, $cssvars);
 
-.form-container {
-  width: 100%;
-  height: 100%;
-  margin: auto;
-  box-shadow: none;
-  border-radius: 16px;
-  background: gt.theme-var(bg-1);
+.login-into-existing-account{
+  display: block;
+  color: gt.theme-var(text-color-7);
+  margin-bottom: 1rem;
+  text-decoration: none;
 
-  @include gm.media-breakpoint-up(sm) {
-    width: 50%;
-    height: auto;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
-  }
-
-  @include gm.media-breakpoint-up(lg) {
-    width: 35%;
-  }
-
-  @include gm.media-breakpoint-up(xl) {
-    width: 27%;
-  }
-
-  @include gm.media-breakpoint-down(sm){
-    display: flex;
-    align-items: center;
-  }
-
-  .signin-form-svg {
-    display: block;
-    margin: 4rem auto 2rem;
-  }
-
-  .btn{
-    height: 48px;
-    border-radius: 12px;
-  }
-
-  .btn-primary{
-    color:gt.theme-var(bg-1);
-  }
-
-  .btn-outline-primary{
-    border-radius: 12px;
-    color: gt.theme-var(text-color-1);
-  }
-
-  .form-helper{
-    color: red;
+  &:hover{
+    text-decoration: none;
   }
 }
+
