change to smallercase hex

--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -5,7 +5,7 @@ $thememaplight : (
   text-color-4: #c4c4c4,
   text-color-5: #a9abac,
   text-color-6: #e0e0e0,
-  text-color-7: #FE6A07,
+  text-color-7: #fe6a07,
   nav-bg-blue: #0051ff,
   nav-bg-green: #24aa70,
   nav-bg-lightblue: #00baff,
