separate the fields into step one and step two, add clickHandlers for next btn and back btn

--- a/src/web/stylesheets/common/pages/register/style.scss
+++ b/src/web/stylesheets/common/pages/register/style.scss
@@ -7,7 +7,9 @@
 @import './_registerTheme.js';
 
 @include gt.populate-theme($thememaplight, $thememapdark, $cssvars);
-
+#root{
+  height: 100vh;
+}
 .login-into-existing-account{
   display: block;
   color: gt.theme-var(text-color-7);
