--- a/src/web/stylesheets/common/sass/components/_navbar.scss
+++ b/src/web/stylesheets/common/sass/components/_navbar.scss
@@ -22,9 +22,11 @@ nav {
 
     .navigation-item {
       color: gt.theme-var(text-color-1);
-      padding: 1.5rem 2rem;
-      padding-bottom: 0.5rem;
+      padding: 1.5rem 2.5rem;
+      padding-bottom: 0.75rem;
       text-align: center;
+      display: grid;
+      place-items: center;
 
       @include gm.media-breakpoint-down(md) {
         padding: 1.5rem 0;
@@ -46,13 +48,22 @@ nav {
         }
       }
 
+      .nav-icon {
+        width: 1.5rem;
+
+        svg {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
       .nav-bar {
         border-width: 2px;
         border-style: solid;
         border-color: transparent;
         width: 2.5rem;
         border-radius: 2rem;
-        margin-top: 0.75rem;
+        margin-top: 1rem;
         margin-left: auto;
         margin-right: auto;
       }
