--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -6,6 +6,7 @@ $thememaplight : (
   text-color-5: #a9abac,
   text-color-6: #e0e0e0,
   text-color-7: #4361ee,
+  text-color-8: #fe6a07,
   nav-bg-blue: #0051ff,
   nav-bg-green: #24aa70,
   nav-bg-lightblue: #00baff,
@@ -29,6 +30,7 @@ $thememapdark : (
   text-color-5: #a9abac,
   text-color-6: #e0e0e0,
   text-color-7: #4361ee,
+  text-color-8: #fe6a07,
   nav-bg-blue: #0051ff,
   nav-bg-green: #24aa70,
   nav-bg-lightblue: #00baff,
@@ -51,6 +53,7 @@ $cssvars : (
   text-color-5: --text-color-5,
   text-color-6: --text-color-6,
   text-color-7: --text-color-7,
+  text-color-8: --text-color-8,
   nav-bg-blue: --nav-bg-blue,
   nav-bg-green: --nav-bg-green,
   nav-bg-lightblue: --nav-bg-lightblue,
