--- a/src/web/stylesheets/common/sass/components/_auth-containers.scss
+++ b/src/web/stylesheets/common/sass/components/_auth-containers.scss
@@ -2,7 +2,6 @@
 @use '../base/mixins' as gm;
 
 .auth-container {
-  min-height: 100vh;
   background: url(../../../../../images/signin/background-vector.svg);
   background-repeat: no-repeat;
   background-size: contain;
@@ -11,15 +10,19 @@
 
 .form-container {
   width: 100%;
-  height: 100%;
   margin: auto;
   box-shadow: none;
   border-radius: 16px;
   background: gt.theme-var(bg-1);
 
+  @include gm.media-breakpoint-down(ss) {
+    min-height: 100vh;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+
   @include gm.media-breakpoint-up(sm) {
     width: 50%;
-    height: auto;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
   }
 
@@ -31,7 +34,7 @@
     width: 27%;
   }
 
-  @include gm.media-breakpoint-down(sm){
+  @include gm.media-breakpoint-down(sm) {
     display: flex;
     align-items: center;
   }
@@ -41,21 +44,17 @@
     margin: 4rem auto 2rem;
   }
 
-  .btn{
+  .btn {
     height: 48px;
     border-radius: 12px;
   }
 
-  .btn-primary{
-    color:gt.theme-var(bg-1);
+  .btn-primary {
+    color: gt.theme-var(bg-1);
   }
 
-  .btn-outline-primary{
+  .btn-outline-primary {
     border-radius: 12px;
     color: gt.theme-var(text-color-1);
-  }
-
-  .form-helper{
-    color: red;
   }
 }
