--- a/src/web/stylesheets/common/sass/components/_modal.scss
+++ b/src/web/stylesheets/common/sass/components/_modal.scss
@@ -117,4 +117,17 @@
       overflow-y: auto;
     }
   }
+
+  &.curved {
+    .modal-dialog {
+      .modal-content {
+        border-radius: 1rem;
+
+        button,
+        a {
+          border-radius: 0.5rem;
+        }
+      }
+    }
+  }
 }
