--- a/src/web/stylesheets/common/pages/register/style.scss
+++ b/src/web/stylesheets/common/pages/register/style.scss
@@ -12,7 +12,7 @@
   min-height: 100vh;
 }
 
-.login-into-existing-account {
+.login-into-existing-account, .not-given-number {
   display: block;
   color: gt.theme-var(text-color-7);
   margin-bottom: 1rem;
@@ -33,5 +33,39 @@
 
   .back-btn {
     cursor: pointer;
+  }
+}
+
+.label-and-otp-fields{
+  width: 90%;
+  margin: auto;
+
+  @include gm.media-breakpoint-up(sm){
+    width: 70%;
+  }
+}
+
+.otp-fields{
+  display: flex;
+  justify-content: space-between;
+
+  input:not(:last-child){
+    margin-right: .6rem;
+  }
+  input{
+    padding: initial;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    outline: none;
+    border-radius: initial;
+    border-bottom-width: 2px !important;
+    text-align: center;
+    border-bottom-width: 1px;
+  }
+
+  input:focus{
+    box-shadow: none;
+    outline: none;
   }
 }
