first draft of full working register form

--- a/src/web/stylesheets/common/pages/register/style.scss
+++ b/src/web/stylesheets/common/pages/register/style.scss
@@ -12,6 +12,10 @@
   min-height: 100vh;
 }
 
+.form-helper{
+  display:none;
+};
+
 .login-into-existing-account, .not-given-number {
   display: block;
   color: gt.theme-var(text-color-8);
