--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -7,6 +7,7 @@ $thememaplight : (
   text-color-6: #e0e0e0,
   text-color-7: #4361ee,
   text-color-8: #fe6a07,
+  text-color-9:#ffeab2,
   nav-bg-blue: #0051ff,
   nav-bg-green: #24aa70,
   nav-bg-lightblue: #00baff,
@@ -31,6 +32,7 @@ $thememapdark : (
   text-color-6: #e0e0e0,
   text-color-7: #4361ee,
   text-color-8: #fe6a07,
+  text-color-9:#ffeab2,
   nav-bg-blue: #0051ff,
   nav-bg-green: #24aa70,
   nav-bg-lightblue: #00baff,
@@ -54,6 +56,7 @@ $cssvars : (
   text-color-6: --text-color-6,
   text-color-7: --text-color-7,
   text-color-8: --text-color-8,
+  text-color-9: --text-color-9,
   nav-bg-blue: --nav-bg-blue,
   nav-bg-green: --nav-bg-green,
   nav-bg-lightblue: --nav-bg-lightblue,
