--- a/src/web/stylesheets/common/pages/login/style.scss
+++ b/src/web/stylesheets/common/pages/login/style.scss
@@ -15,6 +15,11 @@
   min-height: 100vh;
 }
 
+.form-helper,
+#form-error {
+  display: none;
+}
+
 .btn a {
   color: inherit;
   text-decoration: none;
@@ -27,5 +32,44 @@
 
   &:hover {
     text-decoration: none;
+  }
+}
+
+.iti--separate-dial-code {
+  width: 100%;
+}
+
+.passwordfield-with-toggle-icon {
+  position: relative;
+
+  .password-toggle-icon-container {
+    position: absolute;
+    right: 10px;
+    top: 0.4rem;
+    font-size: 1rem;
+    color: gt.theme-var(text-color-5);
+    z-index: 3;
+
+    i {
+      cursor: pointer;
+    }
+  }
+}
+
+input[type="password"].is-invalid,
+input[type="text"]#password.is-invalid {
+  background-image: unset;
+}
+
+.nav-pills {
+  .nav-link {
+    border-radius: 0;
+    border-bottom: 1px solid gt.theme-var(text-color-9);
+  }
+
+  .nav-link.active {
+    color: gt.theme-var(text-color-8);
+    background-color: gt.theme-var(bg-1);
+    border-bottom: 1px solid gt.theme-var(text-color-8);
   }
 }
